// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PublicationInfoList renders with publicationInfo 1`] = `
<div
  className="__InlineList__"
>
  <span
    className=""
  >
    Published in
    : 
  </span>
  <ul>
    <li
      key="Test Journal"
    >
      <PublicationInfo
        info={
          Immutable.Map {
            "journal_title": "Test Journal",
          }
        }
      />
    </li>
  </ul>
</div>
`;

exports[`PublicationInfoList renders with wrapperClassName 1`] = `
<InlineList
  extractKey={[Function]}
  items={
    Immutable.List [
      Immutable.Map {
        "journal_title": "Test Journal",
      },
    ]
  }
  label="Published in"
  renderItem={[Function]}
  separateItems={true}
  separator=", "
  suffix={null}
  wrapperClassName={null}
/>
`;

exports[`PublicationInfoList renders without label if labeled false 1`] = `
<InlineList
  extractKey={[Function]}
  items={
    Immutable.List [
      Immutable.Map {
        "journal_title": "Test Journal",
      },
    ]
  }
  label={null}
  renderItem={[Function]}
  separateItems={true}
  separator=", "
  suffix={null}
  wrapperClassName={null}
/>
`;
